fix: tab 2 labels, spacing

--- a/src/components/global/header/headerCategories.scss
+++ b/src/components/global/header/headerCategories.scss
@@ -5,7 +5,7 @@
   display: block;
   width: calc(100vw - 230px);
   max-width: calc(100vw - 230px);
-  padding-right: 32px;
+  padding-right: 64px;
   box-sizing: border-box;
 }
 
@@ -16,7 +16,7 @@
 
   &__inner {
     display: block;
-    column-width: 180px;
+    column-width: 125px;
     column-gap: 32px;
     max-width: 100%;
     box-sizing: border-box;
